Add screenshots of test execution and Jacoco coverage